# orin-pico-integration-test

./: .gitignore  CLAUDE.md  README.md
orin/: client.py
pico/: CMakeLists.txt  main.c  pico_sdk_import.cmake
